--- a/src/hojas-de-estilo/Cart.css
+++ b/src/hojas-de-estilo/Cart.css
@@ -1,155 +1,144 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.cart-full{
-    min-height: 800px;
-    margin-bottom: 40px;
-    min-width: 340px;
+.cart-full {
+  min-height: 800px;
+  margin-bottom: 40px;
+  min-width: 340px;
 }
-.cart-full-h{
-    letter-spacing: 3px;
-    margin-top: 40px;
-}
-
-.detalles{
-    letter-spacing: 6px;
-    font-size: 3rem;
+.cart-full-h {
+  letter-spacing: 3px;
+  margin-top: 40px;
 }
 
-.renderizada-card{
-    display: flex;
-    flex-direction: column;
-    margin-top: 40px;
-    
-
+.detalles {
+  letter-spacing: 6px;
+  font-size: 3rem;
 }
 
-.renderizada-card-unidad{
-    width: 848px;
-    display: flex;
-    margin-bottom: 40px;
-    background-color: #fff;
-    box-shadow: 0 3px 13px 1px rgba(0 0 0 / 9%); 
+.renderizada-card {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
 }
 
-.renderizada-foto{
-    max-width: 300px;
+.renderizada-card-unidad {
+  width: 848px;
+  display: flex;
+  margin-bottom: 40px;
+  background-color: #fff;
+  box-shadow: 0 3px 13px 1px rgba(0 0 0 / 9%);
 }
 
-.renderizada-botonera-item-cart{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 5px;
+.renderizada-foto {
+  max-width: 300px;
 }
 
-.renderizada-specs-todas{
-    margin: 60px 60px 40px 60px;
-    gap: 20px 30px;
+.renderizada-botonera-item-cart {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 5px;
 }
 
-.renderizada-specs-palabras p{
-    margin-bottom: 20px;
+.renderizada-specs-todas {
+  margin: 60px 60px 40px 60px;
+  gap: 20px 30px;
 }
 
-.botonera-sumaresta{
-    font-size: 1rem;    
-
-    cursor: pointer;
-    border: 1px solid black;
-    border-radius: 3px;
-    padding: 1px 6px 1px 6px;
-    margin-left: 10px;
-    margin-right: 10px;
-    color: rgb(120, 9, 224);
-    font-weight: bold;
-    height: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+.renderizada-specs-palabras p {
+  margin-bottom: 20px;
 }
 
-.renderizada-botonera-item-cart-suma-resta{
-    display: flex;
-    flex-direction: row;
-    
-}
-.subTotal{
-    margin-left: 10px;
+.botonera-sumaresta {
+  font-size: 1rem;
+
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 3px;
+  padding: 1px 6px 1px 6px;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: rgb(120, 9, 224);
+  font-weight: bold;
+  height: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
-.totales-cart{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+.renderizada-botonera-item-cart-suma-resta {
+  display: flex;
+  flex-direction: row;
+}
+.subTotal {
+  margin-left: 10px;
 }
 
-.vaciar-carrito{
-    margin-bottom: 0px;
+.totales-cart {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
-.carrito-vacio{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+.vaciar-carrito {
+  margin-bottom: 0px;
+}
+.carrito-vacio {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.totales-cart-item {
+  margin-top: 5px;
+}
+.volver {
+  font-size: 1.5rem;
+  margin-top: 40px;
+  width: 300px;
+}
+
+@media (max-width: 960px) {
+  .detalles {
+    font-size: 5vw;
+  }
+  .renderizada-foto {
+    display: none;
+  }
+  .renderizada-card {
     align-items: center;
-}
-.totales-cart-item{
-    margin-top: 5px;
-}
-.volver{
-    font-size: 1.5rem;
-    margin-top: 40px;
-    width: 300px;
-}
-
-
-@media (max-width: 960px){
-    .detalles{
-        font-size: 5vw;
-    }
-    .renderizada-foto{
-        display: none;
-        
-    }
-    .renderizada-card{
-        align-items: center;
-    }
-    .renderizada-card-unidad{
-        width: 70vw;
-        flex-direction: row;
-        justify-content: center;
-    }
-    .full-form-ending{
-         min-width: 350px; 
-/*         display: flex;
+  }
+  .renderizada-card-unidad {
+    width: 70vw;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .full-form-ending {
+    min-width: 350px;
+    /*         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center; */
-    }
-    .vacio1{
-        font-size: 5vw;
-    }
-    
+  }
+  .vacio1 {
+    font-size: 5vw;
+  }
 }
 
-@media (max-width: 714px){
-    .renderizada-botonera-item-cart{
-        flex-flow: wrap
-    }
-    .totales-cart{
-        flex-direction: column;
-        align-items: center;
-    }
-    .vaciar-carrito{
-        width: 200px;
-    }
-
-    
+@media (max-width: 714px) {
+  .renderizada-botonera-item-cart {
+    flex-flow: wrap;
+  }
+  .totales-cart {
+    flex-direction: column;
+    align-items: center;
+  }
+  .vaciar-carrito {
+    width: 200px;
+  }
 }
 
-@media (max-width: 436px){
-
-
-    
+@media (max-width: 436px) {
 }
