--- a/src/App.css
+++ b/src/App.css
@@ -1,74 +1,65 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;1,600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;1,600&display=swap");
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat Alternates', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat Alternates", sans-serif;
 }
 
-html, body {
-    font-size: 18px;
-    background-color: #f5f6f7;
+html,
+body {
+  font-size: 18px;
+  background-color: #f5f6f7;
 }
 
-.App{
-    min-height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+.App {
+  min-height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
-.tituloCustom{
-    font-size: 3rem;
-    color: white;
-    text-shadow:  4px 4px 4px black;
-    margin-bottom: 1rem;
-    width: 100vw;
-
+.tituloCustom {
+  font-size: 3rem;
+  color: white;
+  text-shadow: 4px 4px 4px black;
+  margin-bottom: 1rem;
+  width: 100vw;
 }
-  
- .tituloElige{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 2rem;
-    margin: 40px 0px 30px 0;
-    width: 100vw;
+
+.tituloElige {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 2rem;
+  margin: 40px 0px 30px 0;
+  width: 100vw;
 }
 
 @media (max-width: 960px) {
-    .tituloCustom{
-        
+  .tituloCustom {
     font-size: 2rem;
+  }
 
-    }
-
-    .tituloElige h2{
-        font-size: 40px;
-        width: 80%;
-    }
-
+  .tituloElige h2 {
+    font-size: 40px;
+    width: 80%;
+  }
 }
 
 @media (max-width: 560px) {
-
-    .tituloElige h2{
-        font-size: 25px;
-        width: 80%;
-    }
-
+  .tituloElige h2 {
+    font-size: 25px;
+    width: 80%;
+  }
 }
 
 @media (max-width: 390px) {
-.tituloCustom{
-        
+  .tituloCustom {
     font-size: 1.6rem;
-
-    }
-
+  }
 }
-
