--- a/src/hojas-de-estilo/MainHero.css
+++ b/src/hojas-de-estilo/MainHero.css
@@ -1,36 +1,36 @@
-
-.hero{background-image: url("https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 400px;
-    color: white;
+.hero {
+  background-image: url("https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 400px;
+  color: white;
 }
 
 .hero-button {
-    background-color: rgb(120, 9, 224);
-    border: 0;
-    padding: 1rem 1.5rem;
-    border-radius: 0.4rem;
-    transition: all 0.6s;
-    color: white;
+  background-color: rgb(120, 9, 224);
+  border: 0;
+  padding: 1rem 1.5rem;
+  border-radius: 0.4rem;
+  transition: all 0.6s;
+  color: white;
 }
 
 .hero-button:hover {
-    transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .hero-button a {
-    color: white;
-    text-decoration: none;
-    font-size: bold;
+  color: white;
+  text-decoration: none;
+  font-size: bold;
 }
 
 .hero-button a:hover {
-    color: black;
+  color: black;
 }
