--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;1,600&display=swap");
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: "Montserrat Alternates", sans-serif;
 }
 
@@ -10,11 +13,13 @@ html,
 body {
   font-size: 18px;
   background-color: #f5f6f7;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .App {
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -27,7 +32,8 @@ body {
   color: white;
   text-shadow: 4px 4px 4px black;
   margin-bottom: 1rem;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
 }
 
 .tituloElige {
@@ -37,7 +43,14 @@ body {
   align-items: center;
   font-size: 2rem;
   margin: 40px 0px 30px 0;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
+}
+
+.tituloElige h2 {
+  max-width: 100%;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
 
 @media (max-width: 960px) {
