--- a/src/hojas-de-estilo/NavBar.css
+++ b/src/hojas-de-estilo/NavBar.css
@@ -6,32 +6,41 @@
   align-items: center;
   letter-spacing: 3px;
   font-size: 2rem;
+  min-width: 0;
+  max-width: 100%;
+  overflow-wrap: anywhere;
+  word-break: break-word;
 }
+
 .NaturAdventurelogo {
   width: 50px;
+  flex: 0 0 auto;
 }
 
 header {
-  padding-right: 0px;
   width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 0 4rem;
+  padding: 0 clamp(1rem, 4vw, 4rem);
   height: 95px;
   background-color: rgb(235, 235, 235);
+  overflow-x: hidden;
 }
 
 .header nav ul {
   padding-top: 10px;
   height: 90px;
   width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
+  min-width: 0;
 }
 
 .nav {
@@ -39,29 +48,57 @@ header {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-
-.liNav {
-  text-decoration: none;
-  color: black;
-  transition: all 0.7s;
-  width: 40px;
-  list-style: none;
-  margin: 1rem 8px 1rem 8px;
-  padding: 0.3rem;
-}
-
-.liNav:hover {
-  color: white;
+  min-width: 0;
+  max-width: 100%;
 }
 
 .ulNav {
   display: flex;
   list-style: none;
   text-decoration: none;
+  flex-wrap: wrap;
+  gap: 8px;
+  max-width: 100%;
+}
+
+.liNav {
+  text-decoration: none;
+  color: black;
+  transition: all 0.7s;
+  list-style: none;
+  margin: 1rem 8px;
+  padding: 0.3rem;
+  width: auto;
+  max-width: 100%;
+}
+
+.liNav:hover {
+  color: white;
 }
 
 a:-webkit-any-link {
   cursor: pointer;
   text-decoration: none;
+}
+
+@media (max-width: 560px) {
+  header {
+    padding: 0 1rem;
+    height: auto;
+  }
+
+  .NaturAdventure {
+    font-size: 1.4rem;
+    letter-spacing: 1px;
+  }
+
+  .NaturAdventurelogo {
+    width: 40px;
+  }
+}
+
+@media (max-width: 390px) {
+  .NaturAdventure {
+    font-size: 1.2rem;
+  }
 }
